Added default channels

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 REACT_APP_RSS_API = 
 REACT_APP_RSS_PUBLIC_KEY = 
+REACT_APP_RSS_DEFAULT_CHANNELS = 'https://www.abc.net.au/news/feed/51120/rss.xml, https://www.dailymail.co.uk/articles.rss'
